--- a/app/src/main/res/layout/eventstatus.xml
+++ b/app/src/main/res/layout/eventstatus.xml
@@ -4,15 +4,12 @@
     android:layout_height="match_parent"
     android:id="@+id/base2">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:layout_weight="1.89"
-            android:layout_gravity="center_horizontal|bottom">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
 
             <Button
                 android:layout_width="170dp"
@@ -25,75 +22,102 @@
             <Button
                 android:layout_width="170dp"
                 android:layout_height="62dp"
-                android:text="New Button"
+                android:text="Back"
                 android:id="@+id/button5"
                 android:layout_row="2"
                 android:layout_column="4" />
         </GridLayout>
 
+        <Button
+            android:layout_width="257dp"
+            android:layout_height="wrap_content"
+            android:text="Edit Event"
+            android:id="@+id/button2"
+            android:layout_gravity="left|top" />
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="406dp"
+            android:layout_height="match_parent"
             android:weightSum="1"
             android:layout_gravity="left|center_vertical">
 
-            <Button
-                android:layout_width="257dp"
-                android:layout_height="wrap_content"
-                android:text="Edit Event"
-                android:id="@+id/button2" />
+            <GridLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:columnCount="100"
+                android:rowCount="100">
 
-            <Button
-                android:layout_width="260dp"
-                android:layout_height="wrap_content"
-                android:text="Cancel Event"
-                android:id="@+id/button3" />
+                <TextView
+                    android:layout_width="136dp"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Name:"
+                    android:layout_row="1"
+                    android:layout_column="0"
+                    android:paddingBottom="14.5sp"
+                    android:id="@+id/textView" />
 
-            <TextView
-                android:layout_width="136dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Name:"
-                android:id="@+id/textView" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_row="3"
+                    android:layout_column="0"
+                    android:paddingBottom="14.5sp"
+                    android:text="Location:"
+                    android:id="@+id/textView3" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Date:"
-                android:id="@+id/textView2" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_row="5"
+                    android:layout_column="0"
+                    android:paddingBottom="14.5sp"
+                    android:text="Description:"
+                    android:id="@+id/textView6" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Location:"
-                android:id="@+id/textView3" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_row="7"
+                    android:layout_column="0"
+                    android:paddingBottom="14.5sp"
+                    android:text="Restriction:"
+                    android:id="@+id/textView5" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Genre:"
-                android:id="@+id/textView4" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_row="9"
+                    android:layout_column="0"
+                    android:paddingBottom="14.5sp"
+                    android:text="Date:"
+                    android:id="@+id/textView2" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Restriction:"
-                android:id="@+id/textView5" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_row="11"
+                    android:layout_column="0"
+                    android:paddingBottom="14.5sp"
+                    android:text="Genre:"
+                    android:id="@+id/textView4" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Description:"
-                android:id="@+id/textView6" />
+                <Button
+                    android:layout_width="169dp"
+                    android:layout_height="wrap_content"
+                    android:text="Cancel Event"
+                    android:id="@+id/button3"
+                    android:layout_row="20"
+                    android:layout_column="0" />
 
+
+
+            </GridLayout>
         </LinearLayout>
-
-    </FrameLayout>
-
 </LinearLayout>
