--- a/app/src/main/res/layout/eventhunters_home.xml
+++ b/app/src/main/res/layout/eventhunters_home.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/hunter_home"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <Button
             android:layout_width="fill_parent"
@@ -20,7 +22,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="100">
 
         <TextView
             android:layout_width="fill_parent"
@@ -31,6 +34,7 @@
             android:gravity="center"
             android:textStyle="bold" />
 
+
     </LinearLayout>
 
     <LinearLayout
@@ -39,13 +43,20 @@
         android:layout_height="wrap_content"
         android:layout_weight="2">
 
-        <ToggleButton
+        <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Host/Attendee"
-            android:id="@+id/toggleButton"
-            android:textOn="HOST"
-            android:textOff="ATTENDEE" />
+            android:text="Host"
+            android:id="@+id/button4"
+            android:onClick="goToScene2"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Attendee"
+            android:id="@+id/button5"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </LinearLayout>
