--- a/app/src/main/res/layout/createevent.xml
+++ b/app/src/main/res/layout/createevent.xml
@@ -14,7 +14,7 @@
             android:inputType="textPersonName|textCapWords"
             android:hint="Name"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/field_Name"
             android:layout_column="0"
             android:layout_row="2"
             android:imeOptions="actionNext" />
