--- a/app/src/main/res/layout/event_status.xml
+++ b/app/src/main/res/layout/event_status.xml
@@ -51,7 +51,7 @@
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Date: "
-            android:id="@+id/textView8"
+            android:id="@+id/data_Date"
             android:layout_weight="1" />
 
         <TextView
@@ -59,7 +59,7 @@
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Location: "
-            android:id="@+id/textView9"
+            android:id="@+id/data_Location"
             android:layout_weight="1" />
 
         <TextView
@@ -67,7 +67,7 @@
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Genre: "
-            android:id="@+id/textView10"
+            android:id="@+id/data_Genre"
             android:layout_weight="1" />
 
         <TextView
@@ -75,7 +75,7 @@
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Restriction: "
-            android:id="@+id/textView11"
+            android:id="@+id/data_Restriction"
             android:layout_weight="1" />
 
         <TextView
@@ -83,7 +83,7 @@
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Description: "
-            android:id="@+id/textView12"
+            android:id="@+id/data_Description"
             android:layout_weight=".6" />
     </LinearLayout>
 
