Made JoinEvents.java and added toast to print out title of attendee event

--- a/app/src/main/res/layout/eventhunters_home.xml
+++ b/app/src/main/res/layout/eventhunters_home.xml
@@ -38,7 +38,8 @@
         <ListView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/UpcomingEventsHost" />
+            android:id="@+id/UpcomingEventsHost"
+            android:clickable="false" />
 
 
     </LinearLayout>
