--- a/app/src/main/res/layout/attendingevents.xml
+++ b/app/src/main/res/layout/attendingevents.xml
@@ -17,16 +17,20 @@
             android:id="@+id/event_find"
             android:layout_marginLeft="5dp"
             android:onClick="button_Click"
-            android:layout_marginRight="5dp" />
+            android:layout_marginRight="5dp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+            android:textColor="#ffffff"
+            style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+
             android:text="@string/upcoming_events"
             android:id="@+id/title_label"
             android:gravity="center"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
     </LinearLayout>
 
     <LinearLayout
@@ -56,17 +60,26 @@
             android:id="@+id/button4"
             android:onClick="button_Click"
             android:layout_weight="1"
-            android:textColor="#000000" />
+            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+            android:textColor="#ffffff"/>
+            <!--android:textColor="#000000" -->
 
-        <Button
+        <android.support.v7.widget.AppCompatButton
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Attendee"
             android:onClick="button_Click"
             android:id="@+id/button5"
             android:layout_weight="1"
-            android:background="#1d3565"
-            android:textColor="#ffffff" />
+            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            />
+            <!--android:background="#1d3565"
+            android:textColor="#ffffff"-->
+
 
     </LinearLayout>
 
