--- a/app/src/main/res/layout/createevent.xml
+++ b/app/src/main/res/layout/createevent.xml
@@ -2,89 +2,121 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/event_item_padding_vertical"
     android:id="@+id/base">
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <EditText
-            android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName|textCapWords"
-            android:hint="Name"
+            android:hint="@string/label_name"
             android:ems="10"
             android:id="@+id/field_Name"
-            android:layout_column="0"
-            android:layout_row="2"
             android:imeOptions="actionNext" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:ems="10"
-            android:id="@+id/field_Data"
-            android:hint="Date" />
+    </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/create_event_date_picker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
+            android:layout_weight="1"
+            android:text="24 Feb 2016"
+            android:layout_marginEnd="4dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/create_event_time_picker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:layout_marginStart="4dp"
+            style="@style/Widget.AppCompat.Spinner.Underlined"
+            android:text="6:00 PM"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+    </LinearLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPostalAddress|textCapWords"
             android:ems="10"
             android:id="@+id/field_Location"
-            android:hint="Location" />
+            android:hint="@string/label_location" />
+    </android.support.design.widget.TextInputLayout>
 
-        <Spinner
-            android:id="@+id/field_Spinner_Genre"
-            android:layout_width="214dp"
-            android:layout_height="49dp"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"
-            android:entries="@array/spinnerItems"
-            android:layout_row="2"
-            android:layout_column="0"></Spinner>
-            <!--android:prompt="Genre" />-->
+    <android.support.v7.widget.AppCompatSpinner
+        android:id="@+id/field_Spinner_Genre"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        style="@style/Widget.AppCompat.Spinner.Underlined"
+        android:entries="@array/spinnerItems"/>
+    <!--android:prompt="Genre" />-->
 
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:id="@+id/radio_Restriction"
-            android:layout_height="wrap_content">
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:id="@+id/radio_Restriction"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_height="wrap_content">
 
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No Restrictions"
-                android:id="@+id/ratio_NoRestrictions" />
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="18+ Only"
-                android:id="@+id/radio_18Plus" />
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="21+ Only"
-                android:id="@+id/radio21Plus" />
-        </RadioGroup>
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="108dp"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:id="@+id/field_Description"
-            android:hint="Event Description" />
-
-        <Button
+        <android.support.v7.widget.AppCompatRadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add Event"
-            android:onClick="button_Click"
-            android:id="@+id/button_AddEvent" />
+            android:text="@string/label_no_restrictions"
+            android:id="@+id/ratio_NoRestrictions" />
+
+        <android.support.v7.widget.AppCompatRadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_18_plus"
+            android:id="@+id/radio_18Plus" />
+
+        <android.support.v7.widget.AppCompatRadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_21_plus"
+            android:id="@+id/radio21Plus" />
+    </RadioGroup>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:maxLines="5"
+            android:ems="10"
+            android:id="@+id/field_Description"
+            android:hint="@string/label_event_description" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.v7.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:text="@string/label_add_event"
+        android:onClick="button_Click"
+        android:id="@+id/button_AddEvent" />
 
 
-    </TableLayout>
 </LinearLayout>
