--- a/app/src/main/res/layout/event_status.xml
+++ b/app/src/main/res/layout/event_status.xml
@@ -18,7 +18,8 @@
             android:text="Edit Event"
             android:onClick="button_Click"
             android:id="@+id/editEvent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
         <Button
             android:layout_width="fill_parent"
@@ -26,7 +27,8 @@
             android:text="Delete Event"
             android:onClick="button_Click"
             android:id="@+id/deleteEvent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            style="@style/Base.Widget.AppCompat.Button.Colored"/>
     </LinearLayout>
 
     <LinearLayout
@@ -41,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
             android:text="Name: "
             android:id="@+id/data_Name"
             android:layout_weight="1" />
@@ -49,7 +51,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
             android:text="Date: "
             android:id="@+id/data_Date"
             android:layout_weight="1" />
@@ -57,7 +59,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
             android:text="Location: "
             android:id="@+id/data_Location"
             android:layout_weight="1" />
@@ -65,7 +67,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
             android:text="Genre: "
             android:id="@+id/data_Genre"
             android:layout_weight="1" />
@@ -73,7 +75,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
             android:text="Restriction: "
             android:id="@+id/data_Restriction"
             android:layout_weight="1" />
@@ -81,7 +83,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
             android:text="Description: "
             android:id="@+id/data_Description"
             android:layout_weight=".6" />
@@ -101,7 +103,8 @@
             android:text="Home"
             android:onClick="button_Click"
             android:id="@+id/button6"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
         <Button
             android:layout_width="fill_parent"
@@ -109,6 +112,7 @@
             android:text="OtherStuff"
             android:onClick="button_Click"
             android:id="@+id/button7"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            style="@style/Base.Widget.AppCompat.Button.Colored"/>
     </LinearLayout>
 </LinearLayout>
