--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -21,7 +21,7 @@
             android:layout_height="100dp"
             android:gravity="center"
             android:text="FEB\n09"
-            android:textColor="#fff"
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />
 
         <android.support.v7.widget.AppCompatTextView
