--- a/app/src/main/res/layout/activity_event_status.xml
+++ b/app/src/main/res/layout/activity_event_status.xml
@@ -135,18 +135,19 @@
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
+                android:layout_marginLeft="40dp"
                 android:layout_below="@+id/event_description"
                 android:text="@string/label_ratings"
                 android:id="@+id/stars_label" />
 
             <android.support.v7.widget.AppCompatRatingBar
                 android:id="@+id/event_rating_bar"
-                android:layout_marginLeft="16dp"
-                android:rating="4"
+                android:layout_marginLeft="40dp"
+                android:rating="5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:numStars="5"
+                android:stepSize="1"
                 android:layout_below="@+id/stars_label"
                 android:layout_alignParentStart="true" />
 
