--- a/app/src/main/res/layout/activity_event_status.xml
+++ b/app/src/main/res/layout/activity_event_status.xml
@@ -136,19 +136,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_below="@+id/event_description"
+                android:layout_below="@+id/Switch"
                 android:text="@string/label_ratings"
                 android:id="@+id/stars_label" />
 
             <android.support.v7.widget.AppCompatRatingBar
                 android:id="@+id/event_rating_bar"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="16dp"
                 android:rating="5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:numStars="5"
                 android:stepSize="1"
-                android:layout_below="@+id/stars_label"
+                android:layout_below="@+id/Switch"
                 android:layout_alignParentStart="true" />
 
             <!--RadioGroup
@@ -207,7 +208,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
                 android:textOff="Not Going"
                 app:showText="false"
                 android:text="Going     "
@@ -217,7 +217,7 @@
                 android:textOn="Going"
                 android:button="@null"
                 android:padding="20dp"
-                android:layout_below="@+id/event_rating_bar"
+                android:layout_below="@+id/event_description"
                 />
 
         </RelativeLayout>
