Changed Format for FindEvents
- Similar to homepage. Button for home page works
- Will focus now on Search bar and ratings

--- a/app/src/main/res/layout/findevents.xml
+++ b/app/src/main/res/layout/findevents.xml
@@ -11,90 +11,41 @@
         android:layout_column="0">
 
         <Button
-            android:layout_width="195dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Find"
-            android:id="@+id/button2"
+            android:text="@string/homeButton"
+            android:id="@+id/homeButton"
             android:layout_row="0"
-            android:layout_column="0" />
+            android:layout_column="0"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+            android:textColor="#ffffff"
+            android:onClick="button_click" />
 
-        <Button
-            android:layout_width="191dp"
-            android:layout_height="wrap_content"
-            android:text="My Events"
-            android:id="@+id/button3"
-            android:layout_row="0"
-            android:layout_column="16" />
     </GridLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="146dp"
+        android:layout_height="524dp"
         android:layout_row="1"
         android:layout_column="0">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="This Week"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+            android:text="@string/upcomingEvents"
             android:id="@+id/textView"
-            android:textStyle="normal|bold"
-            android:gravity="top|center_horizontal" />
+            android:textStyle="bold"
+            android:gravity="center|center_horizontal|top" />
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ThisWeek" />
+            android:layout_height="488dp"
+            android:id="@+id/AllEvents" />
 
     </LinearLayout>
 
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="146dp"
-        android:layout_row="3"
-        android:layout_column="0">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Recommended"
-            android:id="@+id/textView4"
-            android:textStyle="normal|bold"
-            android:gravity="top|center_horizontal" />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/RecommendedEvents" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="146dp"
-        android:layout_row="2"
-        android:layout_column="0" >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Popular"
-            android:id="@+id/textView5"
-            android:textStyle="normal|bold"
-            android:gravity="top|center_horizontal" />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/PopularEvents" />
-
-    </LinearLayout>
 
 </GridLayout>
