--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,9 @@
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
-</resources>
-    <!--?xml version="1.0" encoding="utf-8"?>
+
+    <color name="black_overlay">#66000000</color>
+</resources><!--?xml version="1.0" encoding="utf-8"?>
     <resources>
         <color name="colorPrimary">#009688</color>
         <color name="colorPrimaryDark">#00796b</color>
