--- a/app/src/main/res/layout/activity_createevent.xml
+++ b/app/src/main/res/layout/activity_createevent.xml
@@ -36,6 +36,16 @@
     <android.support.design.widget.FloatingActionButton
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        app:backgroundTint="@color/colorAccent"
+        android:id="@+id/button_clear"
+        android:onClick="button_Click"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_refresh" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         app:backgroundTint="@color/colorAccent"
         android:id="@+id/button_AddEvent"
