--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,12 @@
     tools:context="ucsd.fungineers.eventhunters.Main">
     <item
         android:id="@+id/action_my_events"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="My Events"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="1"
+        android:title="Refresh"
         app:showAsAction="never" />
 </menu>
